# AI-infra-LearningNote

./: .gitignore  CLAUDE.md  README.md  TODO.md  main.cpp
.claude/: settings.local.json
.claude/commands/: blog.md
01-cuda/arch/: README.md  a.out  compile.cu
01-cuda/bank/: a.out  conflict.ptx  full.ptx  trans.cu  transpose_report.ncu-rep
01-cuda/bench/: README.md  a.out  bandwidth.cu
01-cuda/blackwell/: README.md
01-cuda/cg/: README.md  clusterG.cu  threadBG.cu
01-cuda/driver/: README.md
01-cuda/dsmem/: 2stage.cu  README.md  a.out
01-cuda/fuse/: fuseMLP.py
01-cuda/hardware/: README.md  blackwell.md  hopper.md  sm.md
01-cuda/jit/: Makefile  README.md  jit_demo  nvrtc_jit_demo.cu
01-cuda/launch/: README.md  a.out  launch.cu
01-cuda/memory/vmm/: CMakeLists.txt  README.md  hand.cu  vmm_demo.cu
01-cuda/op/softmax/: CMakeLists.txt  a.out  debug_softmax  debug_softmax.cu  exp_bench.py  online_softmax.cu  online_softmax_test.cu  softmax_triton.py  softmaxfp32  softmaxfp32.cu
01-cuda/op/topk/: CMakeLists.txt  top.cu  topk_benchmark.cu
01-cuda/pin/: README.md  bench_pin.py  gpu_malloc  gpu_malloc.cu  pin_malloc  pin_malloc.cu  pre_malloc  pre_malloc.cu
01-cuda/reduce/: README.md
01-cuda/sm/: gpu_cache_query.py
01-cuda/tensorCore/: matmulBlock.cu  mma_m16n8k8tf32.cu  mma_m8n8k4.cu  mmasp.cu
01-cuda/tma/: a.out  simple.cu
010-dist/: README.md
010-dist/DDP/: README.md
010-dist/cp/: README.md
010-dist/dp/: README.md  demo.py
010-dist/ep/: README.md
010-dist/fsdp/: README.md  demo.py
010-dist/hsdp/: README.md
010-dist/tp/: demo.py
010-dist/trans/: README.md  demo.py
010-dist/zero/: README.md  demo.py
011-train/gradAccStep/: README.md
011-train/pre-training/: README.md
012-prec/: README.md
03-llm/IR/: README.md
03-multi/: README.md
04-comm/: README.md
08-tools/glue/torch/nanobind/: CMakeLists.txt  pyproject.toml
09-profile/: README.md
KD/: kd.ipynb
NAS/: README.md
RL/: README.md
concept/: README.md
cuda/hopper/DistributedSM/: CMakeLists.txt  README.md  main.cu
dao/: README.md
debug/: buggy_race.cpp
fuse/: README.md
parallel/: main.py
xpu/: README.md
(+921 files in other folders)
